# fast-whisper-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: export-models.yml  release.yml
scripts/: export_diarization_models.py  install.sh
scripts/ralph/: .last-branch  CLAUDE.md  prd.json  progress.txt
scripts/ralph/archive/2026-03-26-initial-build/: prd.json  progress.txt
src/: audio.rs  cli.rs  convert.rs  inference.rs  main.rs  model.rs  output.rs
src/diarize/: clustering.rs  embedding.rs  mod.rs  postprocess.rs  segmentation.rs
tests/: audio_integration.rs  cli_integration.rs  convert_integration.rs  diarization_integration.rs
