[package]
name = "fast-whisper-rs"
version = "0.1.1"
edition = "2021"
description = "A fast Whisper CLI built on candle — Rust reimplementation of insanely-fast-whisper"
license = "MIT"

[[bin]]
name = "fast-whisper-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
hf-hub = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
symphonia = { version = "0.5", features = ["all"] }
tokenizers = "0.21"
tokio = { version = "1", features = ["rt", "macros"] }
ndarray = "0.17"
npyz = "0.8"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
flash-attn = ["candle-transformers/flash-attn"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
